added owner submission stuff
